# portal-docs

./: .gitignore  .gitmodules  CNAME  CONTRIBUTING.md  LICENSE  README.md  cloudflare_pages_build.sh  config.toml  hugo.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: funding.yaml
data/: clean.json  clean_names  enabled_blocks.json  i18n.json  rules_editor_version  rules_editor_version_history  translations.json
docs/: #PrintNumberQueued.json  And.json  AngleBetweenVectors.json  AppendToArray.json  ApplyMedGadget.json  CapturePoints.json  CosineFromRadians.json  CustomMessageSlot.json  DealDamage.json  DebugMessage.json  DisplayCustomMessage.json  DisplayGameModeMessage.json  DisplayHighlightedWorldLogMessage.json  DisplayNotificationMessage.json  DotProduct.json  EnableAllInputRestrictions.json  EnableDefaultGameModeScoring.json  EnableDefaultGameModeWinCondition.json  EnableGameModeObjective.json  EnableHQ.json  EnableTicketBleedAcceleration.json  EnableVOMessaging.json  EndGameMode.json  EventCapturePoint.json  EventTeam.json  EventVehicle.json  ForcePlayerToSeat.json  ForceRevive.json  GetCapturePoint.json  GetInventoryMagazineAmmo.json  GetObjective.json  GetPlayerDeaths.json  GetPlayers.json  GetPlayersOnPoint.json  GetPreviousOwnerTeamID.json  GetTeamId.json  GetVehicleFromPlayer.json  Heal.json  IndexOfArrayValue.json  InventoryCharacterSpecialties.json  (+37 more)
docs-json/: AbortIf.json  Add.json  ArccosineInDegrees.json  ArccosineInRadians.json  ArcsineInDegrees.json  ArctangentInDegrees.json  ArrayContains.json  Break.json  CapturePointCapturingTime.json  CapturePointNeutralizationTime.json  ClearAllCustomMessages.json  ClosestPlayerTo.json  Continue.json  Control_If.json  CountOf.json  CreateVector.json  CrossProduct.json  DeployAllPlayers.json  DisplayCustomMessage.json  DistanceBetween.json  EmptyArray.json  EnableCapturing.json  EnableGameModeObjective.json  EnableHQ.json  EnableWorldIconText.json  EndGameMode.json  EventPlayer.json  EventWeapon.json  GetAllMCOMs.json  GetAllVehicles.json  GetCaptureProgress.json  GetCurrentOwnerTeamID.json  GetGameModeTargetScore.json  GetGameModeTimeElapsed.json  GetGameModeTimeLimit.json  GetGameModeTimeRemaining.json  GetPlayerFromVehicleSeat.json  GetRemainingFuseTime.json  GetSeatCount.json  GetVehicleState.json  (+28 more)
docs_json/: Abort.json  AbortIf.json  AbsoluteValue.json  Add.json  And.json  AngleBetweenVectors.json  AngleDifference.json  AppendToArray.json  ApplyMedGadget.json  ArccosineInDegrees.json  ArccosineInRadians.json  ArcsineInDegrees.json  ArcsineInRadians.json  ArctangentInDegrees.json  Bool.json  (+250 more)
(+2732 files in other folders)
