[tool.poetry]
name = "portal-docs"
version = "1.1.0"
description = ""
authors = ["p0lygun <solankivibhakar82@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "generators", from="."}
]


[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
python-box = "^7.2.0"
selenium = "^4.24.0"
webdriver-manager = "^4.0.2"
grequests = "^0.7.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
isort = "^5.13.2"
black = "^23.12.1"


[tool.poetry.group.dev.dependencies]
aiohttp = "^3.10.5"

[tool.poetry.scripts]
gen-docs =        "generators.blocks_documentation.__main__:generate"
gen-docs-json =   "generators.blocks_json.__main__:generate"
gen-map-layouts = "generators.map_layouts.__main__:generate"
gen-hugo-menu =   "generators.hugo_menu.__main__:generate"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
